--- a/Public/styles/dashboardStyle.css
+++ b/Public/styles/dashboardStyle.css
@@ -189,12 +189,6 @@ aside .sidebar a span{
     top: 13px;
 }
 
-aside .sidebar a:last-child{
-    position: absolute;
-    bottom: 2rem;
-    width: 100%;
-}
-
 aside .sidebar a.active{
     width: 100%;
     color: var(--color-primary);
@@ -371,6 +365,12 @@ main .expense-tracker .heading{
     text-align: center;
 }
 
+a.expenseSave{
+    position: relative;
+    left: 40%; 
+    font-weight: 600;
+}
+
 main .expense-tracker p{
     text-align: center;
 }
@@ -434,6 +434,10 @@ main .expense-tracker .expenseCard input{
     color: #fff;
 }
 
+::placeholder{
+    color: #fff;
+}
+
 main .expense-tracker .expenseCard p{
     position: relative;
     margin-left: 5%;
@@ -446,7 +450,7 @@ main .expense-tracker .expenseCard p{
 main .expense-tracker .bin{
     position: relative;
     left: 20%;
-    top: 30%;
+    top: 5%;
     color: #fff;
 }
 
@@ -540,9 +544,11 @@ main .goals #goals-items li .goalCard{
     color: #333;
 }
 
-input#budgetSlider {
+span.material-symbols-outlined.bin2 {
+    color: #181a1e;
     position: relative;
-    top: 60%;
+    top: 20%;
+    left: 10%;
 }
     
 .right-section{
@@ -633,4 +639,200 @@ font-weight: 700;
 .move-to-acc {
 display: flex;
 margin-top: 15px;
+}
+
+.right-section{
+    margin-top: 1.4rem;
+    width: 50%;
+}
+
+.right-section .nav{
+    display: flex;
+    justify-content: baseline;
+    gap: 2rem; 
+}
+
+.right-section .nav button{
+    display: none;
+}
+
+.right-section .dark-mode{
+    background-color: var(--color-light);
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    height: 1.6rem;
+    width: 3.2rem;
+    cursor: pointer;
+    border-radius: var(--border-radius-1);
+    position: relative;
+    left: 20%;
+}
+
+.right-section .dark-mode span{
+    font-size: 1.2rem;
+    width: 50%;
+    height: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.right-section .dark-mode span.active{
+    background-color: var(--color-primary);
+    color: white;
+    border-radius: var(--border-radius-1);
+}
+
+.right-section .profile{
+    width: 30%;
+}
+
+.right-section .profile .main-pic {
+    width: 2vw;
+    height: 4vh;
+    cursor: pointer;
+    position: relative;
+    left: 60%;
+    border-radius: 50%;
+}
+
+.right-section .profile .sub-menu-div {
+    position: absolute;
+    top: 10%;
+    right: 5%;
+    width: 320px;
+    background: #fff;
+    /* padding: 20px; */
+    margin: 10px;
+    border-radius: 20px;
+    max-height: 0;
+    overflow: hidden;
+    transition: max-height 0.5s;
+}
+
+
+.right-section .profile .open-menu {
+    max-height:400px;
+}
+
+.right-section .profile .sub-menu{
+    background: #fff;
+    padding: 20px;
+    margin: 10px;
+}
+
+.right-section .profile .user-info{
+    align-items: center;
+}
+
+.right-section .profile .user-info .hidden-pic{
+    width: 3vw;
+    height: 6vh;
+    position: relative;
+left: 40%;
+top: 10px;
+border-radius: 50%;
+}
+
+
+.right-section .profile .user-info h2{
+font-weight: 700;
+position: relative;
+left: 5%;
+top: 10px;
+}
+
+#profileLink{
+    display: flex;
+    align-items: center;
+    transition: all 0.3s ease;
+    font-size: 15px;
+    position: relative;
+left: 5%;
+top: 10px;
+}
+
+#profileLink p{
+width: 70%;
+}
+
+#profileLink .arrow{
+    font-size: 22px;
+}
+
+#profileLink:hover{
+    margin-left: 0.5rem;
+    color: var(--color-primary);
+}
+
+.move-to-acc {
+display: flex;
+margin-top: 15px;
+}
+
+.sub-menu-link{
+display: flex; 
+align-items: center;
+margin: 12px 0;
+transition: all 0.3s ease;
+position: relative;
+left: 5%;
+}
+
+.sub-menu-link p{
+    font-size: 15px;
+    width: 70%;
+    margin-left: 2px;
+}
+
+.sub-menu-link .arrow{
+    font-size: 22px;
+    z-index: 2;
+}
+
+.sub-menu-link:hover{
+    margin-left: 0.5rem;
+    color: var(--color-primary);
+}
+
+.ad{
+    padding: var(--card-padding);
+background-color: var(--color-white);
+border-radius: var(--card-border-radius);
+margin-top: 1rem;
+box-shadow: var(--box-shadow);
+/* display: flex;
+justify-content: space-around;
+flex-wrap: wrap; */
+gap: 1.4rem;
+transition: all 0.3s ease;
+    color: #fff;
+    text-align: center;
+     padding: 12px;
+     background:linear-gradient(35deg, rgb(255, 199, 192), rgb(0, 255, 110),rgb(226, 192, 255),rgb(0, 255, 234),rgb(225, 255, 0)); ;
+     height: 100vh;
+     z-index: -1;
+}
+
+.ad:hover{
+    box-shadow: none;
+}
+.ad .adlines{
+    position: relative;
+    top: 30px
+}
+
+.ad a{
+    text-decoration: none;
+    display: inline-block;
+    color: #fff;
+    font-size: medium;
+    border-radius: 50px;
+    padding: 14px 20px;
+    margin-top: 20px;  
+    background: #181a1e;
+    position: relative;
+    top: 20px; 
+    
 }
