--- a/views/home.ejs
+++ b/views/home.ejs
@@ -6,10 +6,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Homepage</title>
     <link rel="stylesheet" href="/styles/style2.css">
+    <link
+        href="https://fonts.googleapis.com/css2?family=Playwrite+ES:wght@100..400&family=Roboto+Condensed:ital,wght@0,100..900;1,100..900&display=swap"
+        rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-        <style>
-            body {
+    <style>
+        body {
             background-color: #f8f9fa;
         }
 
@@ -53,10 +56,12 @@
         #userName {
             font-size: 1.1rem;
         }
-        </style>
 
 
-    </head>
+    </style>
+
+
+</head>
 
 <body>
     <div class="hero">
@@ -67,8 +72,8 @@
             <div class="container-fluid">
                 <a class="navbar-brand" href="#">FinTrack</a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
-                    data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
-                    aria-label="Toggle navigation">
+                    data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
+                    aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                 </button>
                 <div class="collapse navbar-collapse navItem" id="navbarSupportedContent">
@@ -83,32 +88,32 @@
                             <a class="nav-link" href="/login">Login</a>
                         </li>
                     </ul>
-    
+
                 </div>
             </div>
         </nav>
-    
 
-    
-    
+
+
+
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
             integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
             crossorigin="anonymous"></script>
-    <div class="content">
-        <h1>
-            WELCOME TO FinTrack
-        </h1>
-        <p>
-    We empower you to take control of your financial journey. Create accounts,
-    make deposits, and explore our intuitive dashboard. Easily track your financial activity,
-    set savings goals, and stay informed. Your financial well-being is our priority.🌟
-        </p>
-    <form action="" method="get">
-    <a href="/login" class="startedBtn">Get Started</a>
-    </form>    
+        <div class="content">
+            <h1>
+                WELCOME TO FinTrack
+            </h1>
+            <p>
+                We empower you to take control of your financial journey. Create accounts,
+                make deposits, and explore our intuitive dashboard. Easily track your financial activity,
+                set savings goals, and stay informed. Your financial well-being is our priority.🌟
+            </p>
+            <form action="" method="get">
+                <a href="/login" class="startedBtn">Get Started</a>
+            </form>
+        </div>
     </div>
-    </div>
-   
+
 </body>
 
 </html>
