--- a/views/home.ejs
+++ b/views/home.ejs
@@ -108,7 +108,7 @@
                 make deposits, and explore our intuitive dashboard. Easily track your financial activity,
                 set savings goals, and stay informed. Your financial well-being is our priority.🌟
             </p>
-            <form action="" method="get">
+            <form class="remaining" action="" method="get">
                 <a href="/login" class="startedBtn">Get Started</a>
             </form>
         </div>
