--- a/Public/styles/dashboardStyle.css
+++ b/Public/styles/dashboardStyle.css
@@ -189,6 +189,30 @@ aside .sidebar a span{
     top: 13px;
 }
 
+button.lastChild {
+    background: transparent;
+    display: flex;
+    position: absolute;
+    bottom: 2rem;
+    width: 100%;
+    color: var(--color-info-dark);
+    font-size: 1.6rem;
+    line-height: 10px;
+    margin-left: 1rem;
+    transition: all 0.3s ease;
+}
+
+button.lastChild span{
+    position: relative;
+    top: 3px;
+    transition: all 0.3s ease;   
+}
+
+button.lastChild:hover{
+    color: var(--color-primary);
+    margin-left:0.6rem;
+}
+
 aside .sidebar a.active{
     width: 100%;
     color: var(--color-primary);
@@ -519,6 +543,10 @@ main .goals #goal-items input{
     font-size: 18px;
 }
 
+main .goals #goal-items input::placeholder{
+    color: #181a1e;
+}
+
 main .goals #goal-items p{
     color: #fff;
 }
@@ -604,6 +632,13 @@ span.material-symbols-outlined.bin2 {
     cursor: pointer;
     position: relative;
     left: 60%;
+    width: 2vw;
+    height: 4vh;
+    cursor: pointer;
+    position: relative;
+    left: 60%;
+    border-radius: 50%;
+    border: 2px solid var(--color-primary);
 }
 
 .right-section .profile .sub-menu-div{
@@ -623,17 +658,9 @@ span.material-symbols-outlined.bin2 {
     align-items: center;
 }
 
-.right-section .profile .user-info .hidden-pic{
-    width: 5vw;
-    height: 10vh;
-    position: relative;
-left: 40%;
-border-radius: 50%;
-}
-
-
 .right-section .profile .user-info h2{
 font-weight: 700;
+color: #181a1e;
 }
 
 .move-to-acc {
@@ -688,15 +715,6 @@ margin-top: 15px;
     width: 30%;
 }
 
-.right-section .profile .main-pic {
-    width: 2vw;
-    height: 4vh;
-    cursor: pointer;
-    position: relative;
-    left: 60%;
-    border-radius: 50%;
-}
-
 .right-section .profile .sub-menu-div {
     position: absolute;
     top: 10%;
@@ -727,12 +745,13 @@ margin-top: 15px;
 }
 
 .right-section .profile .user-info .hidden-pic{
-    width: 3vw;
-    height: 6vh;
-    position: relative;
+width: 5vw;
+height: 9vh;
+position: relative;
+top: 9px;
 left: 40%;
-top: 10px;
 border-radius: 50%;
+z-index: 2;
 }
 
 
@@ -753,12 +772,20 @@ left: 5%;
 top: 10px;
 }
 
+#profileLink span{
+    color: #181a1e;
+}
+
 #profileLink p{
 width: 70%;
+color: #181a1e;
+z-index: 2;
 }
 
 #profileLink .arrow{
     font-size: 22px;
+    color: #181a1e;
+    z-index: 2;
 }
 
 #profileLink:hover{
@@ -780,15 +807,22 @@ position: relative;
 left: 5%;
 }
 
+.sub-menu-link span{
+    color: #181a1e;
+}
+
 .sub-menu-link p{
+    color: #181a1e;
     font-size: 15px;
     width: 70%;
     margin-left: 2px;
+    z-index: 2;
 }
 
 .sub-menu-link .arrow{
     font-size: 22px;
     z-index: 2;
+    color: #181a1e;
 }
 
 .sub-menu-link:hover{
@@ -812,7 +846,7 @@ transition: all 0.3s ease;
      padding: 12px;
      background:linear-gradient(35deg, rgb(255, 199, 192), rgb(0, 255, 110),rgb(226, 192, 255),rgb(0, 255, 234),rgb(225, 255, 0)); ;
      height: 100vh;
-     z-index: -1;
+     z-index: -2;
 }
 
 .ad:hover{
@@ -820,7 +854,12 @@ transition: all 0.3s ease;
 }
 .ad .adlines{
     position: relative;
-    top: 30px
+    top: 30px;
+    z-index:1;
+}
+
+.ad .adlines h1,h2{
+    z-index:1;
 }
 
 .ad a{
@@ -896,11 +935,3 @@ transition: all 0.3s ease;
     border-radius: var(--border-radius-1);
 }
 
-
-@media (min-width: 320px) and (max-width: 765px) {
-
-}
-
-@media (min-width: 760px) and (max-width: 1050px) {
-
-}
