--- a/views/enter_pin.ejs
+++ b/views/enter_pin.ejs
@@ -66,6 +66,10 @@
     .btn-primary:hover {
       background-color: #0056b3;
     }
+    .b{
+      text-decoration: none;
+      color: #007bff;
+    }
 
 
   </style>
@@ -77,7 +81,8 @@
       <label for="exampleInputPassword1" class="form-label">Enter the correct pin</label>
       <input type="password" class="form-control" id="exampleInputPassword1" name="pin" required>
     </div>
-    <button type="submit" class="btn btn-primary">Submit</button>
+    <button type="submit" class="btn btn-primary">Submit</button> <br> <br>
+    <a class="b" href="/">Back to home</a>
   </form>
 </body>
 
