--- a/views/prime.ejs
+++ b/views/prime.ejs
@@ -135,17 +135,15 @@
     
 <div class="all">
     <a class="back" href="/dashboard"><h4>Back to Dashboard</h4></a>
-    <h2>Responsive Pricing Tables</h2>
-    <p>Resize the browser window to see the effect.</p>
+    <h2>These are some memberships that we will be providing</h2>
+    <p>will work in near future</p>
 
     <div class="columns">
         <ul class="price">
             <li class="header">Basic</li>
             <li class="grey">$ 9.99 / year</li>
-            <li>10GB Storage</li>
-            <li>10 Emails</li>
-            <li>10 Domains</li>
-            <li>1GB Bandwidth</li>
+            <li>Free ATM Withdrawals: 10 per month</li>
+            <li>Online Banking: Free</li>
             <li class="grey"><button onclick="showDetails('Basic Plan', 'Monthly Fee: Free\nTransaction Limit: 10 free transactions per month\nATM Withdrawals: 5 free withdrawals per month, then $1 per withdrawal\nOnline Banking: Yes\nCustomer Support: Standard email and phone support\nInterest Rate on Savings: 0.5% per annum\nAccount Minimum: $0')" class="button">Sign Up</button></li>
         </ul>
     </div>
@@ -154,11 +152,11 @@
         <ul class="price">
             <li class="header" style="background-color:#04AA6D">Pro</li>
             <li class="grey">$ 24.99 / year</li>
-            <li>25GB Storage</li>
-            <li>25 Emails</li>
-            <li>25 Domains</li>
-            <li>2GB Bandwidth</li>
-            <li class="grey"><button onclick="showDetails('Pro Plan', 'Monthly Fee: $9.99\nTransaction Limit: 50 free transactions per month\nATM Withdrawals: 10 free withdrawals per month, then $1 per withdrawal\nOnline Banking: Yes, with additional features like bill pay and budgeting tools\nCustomer Support: Priority email and phone support\nInterest Rate on Savings: 1.0% per annum\nAccount Minimum: $100')" class="button">Sign Up</button></li>
+            <li>Interest Rate: 4% per annum</li>
+            <li>Minimum Balance: $100</li>
+            <li>Free ATM Withdrawals: 50 per month</li>
+            <li>Online Banking: Free</li>
+            <li class="grey"><button onclick="showDetails('Pro Plan', 'Monthly Fee: $9.99\nTransaction Limit: 50 free transactions per month\nATM Withdrawals: 10 free withdrawals per month, then $1 per withdrawal\nOnline Banking: Yes, with additional features like bill pay and budgeting tools\nCustomer Support: Priority email and phone support\nInterest Rate on Savings: 4.0% per annum\nAccount Minimum: $100')" class="button">Sign Up</button></li>
         </ul>
     </div>
 
@@ -166,10 +164,11 @@
         <ul class="price">
             <li class="header">Premium</li>
             <li class="grey">$ 49.99 / year</li>
-            <li>50GB Storage</li>
-            <li>50 Emails</li>
-            <li>50 Domains</li>
-            <li>5GB Bandwidth</li>
+            <li>Free ATM Withdrawals: 10 per month</li>
+            <li>Online Banking: Free</li>
+            <li>Interest Rate: 6% per annum</li>
+<li>Minimum Deposit: $1000</li>
+<li>Tenure: 1 year</li>
             <li class="grey"><button onclick="showDetails('Premium Plan', 'Monthly Fee: $29.99\nTransaction Limit: Unlimited transactions\nATM Withdrawals: Unlimited free withdrawals\nOnline Banking: Yes, with all Pro features plus investment management tools\nCustomer Support: 24/7 dedicated concierge support\nInterest Rate on Savings: 1.5% per annum\nAccount Minimum: $500')" class="button">Sign Up</button></li>
         </ul>
     </div>
