--- a/views/pin.ejs
+++ b/views/pin.ejs
@@ -10,12 +10,13 @@
   <style>
     body {
       font-family: Arial, sans-serif;
+      background-image: url(/pexels-davidmcbee-730547.jpg);
+      background-position: center;
+      background-repeat: no-repeat;
+      background-size: cover;
     }
 
     .input-group-text {
-      position: absolute;
-      top: 40%;
-      left: 46%;
       font-size: 20px;
     }
 
@@ -33,19 +34,6 @@
       border-color: #80bdff;
     }
 
-    .pin-boxes {
-      position: absolute;
-      top: 50%;
-      left: 40%;
-    }
-
-    .mpin {
-      position: absolute;
-      top: 70%;
-      left: 50%;
-      transform: translateX(-50%);
-    }
-
     .email-input {
       max-width: 300px;
       margin: 20px auto;
@@ -59,12 +47,21 @@
     .btn-links a {
       margin-right: 10px;
     }
+    .hide{
+      color: #ffffff;
+      background-color: #3891ff;
+      padding: 10px 10px 10px;
+      border-radius: 4px;
+    }
+    #emailHelp{
+      color: #ffffff;
+    }
   </style>
 </head>
 
 <body>
-  <div class="container">
-    <span class="input-group-text" id="basic-addon2">ENTER PIN</span>
+  <div class="container text-center mt-4">
+    <span class="input-group-text mx-auto d-inline-block">ENTER PIN</span>
   </div>
 
   <form action="/pin" method="POST" class="email-input">
@@ -74,7 +71,7 @@
       <div id="emailHelp" class="form-text">We'll never share your email with anyone else.</div>
     </div>
 
-    <div class="pin-boxes">
+    <div class="pin-boxes d-flex justify-content-center mb-3">
       <input type="password" name="pin1" maxlength="1" size="1" min="0" max="9" pattern="[0-9]{1}" autofocus
         autocomplete="off" />
       <input type="password" name="pin2" maxlength="1" size="1" min="0" max="9" pattern="[0-9]{1}" />
@@ -84,10 +81,10 @@
       <input type="password" name="pin6" maxlength="1" size="1" min="0" max="9" pattern="[0-9]{1}" />
     </div>
 
-    <button type="submit" class="btn btn-primary mpin">Generate New MPIN</button>
+    <button type="submit" class="btn btn-primary d-block mx-auto">Generate New MPIN</button>
     <div class="btn-links">
-      <a href="/enter_pin">Already have it</a>
-      <a href="/balance">Balance</a>
+      <a class="hide" href="/enter_pin">Already have it</a>
+      <a class="hide" href="/balance">Balance</a>
     </div>
   </form>
 
@@ -105,7 +102,6 @@
         });
       });
     });
-
   </script>
 </body>
 
